# ws-chat

./: Cargo.toml
backend/: Cargo.toml
backend/src/: error.rs  lib.rs  main.rs  message.rs  users.rs
backend/src/stomp/: frame.rs
frontend/: .gitignore  Cargo.toml  README.md  index.html
frontend/src/: main.rs  websocket.rs
frontend/src/agents/: mod.rs  websocket.rs
frontend/src/components/: app_bar.rs  chat.rs  join.rs  message.rs  mod.rs
learnaxum/: Cargo.toml
learnaxum/src/: main.rs
learnhyper/: Cargo.toml
learnhyper/src/: main.rs
learntower/: Cargo.toml
learntower/src/: main.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  message.rs
