[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[package.metadata.scripts]
tailwind = "npx tailwindcss -i styles/input.css -o styles/output.css --watch"
serve = "trunk serve --port 3000"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
log = "0.4.17"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
web-sys = "0.3.60"
yew = "0.19.3"
yew-agent = "0.1.0"
yew-router = "0.16.0"

shared ={ path = "../shared" }
anyhow = "1.0.65"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
dashmap = "5.4.0"
