[package]
name = "learntower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
tokio = { version = "1.20.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
